{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 1056,
  "lineage": "6baefc02-e64f-4a7f-4682-ef9eecc60f80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e8a34d3d2145433",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:elastic-ip/eipalloc-07e8a34d3d2145433",
            "domain": "vpc",
            "id": "eipalloc-07e8a34d3d2145433",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-201-196-143.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.196.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MyVPC-NAT-EIP"
            },
            "tags_all": {
              "Name": "MyVPC-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068d7b3dd93d9c2a6",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:instance/i-0009ba52ece171a06",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-eks-shop-cluster-bastion-profile",
            "id": "i-0009ba52ece171a06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "LetMeIn",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e61b30c5d6c8113",
            "private_dns": "ip-10-10-1-122.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.122",
            "public_dns": "ec2-43-203-201-91.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.201.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f89f39c9e3792da",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ff63b823a1ef409",
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05119a8a1db54b80d",
              "sg-0e542698da03d923f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.cluster_policies",
            "aws_security_group.bastion",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main",
            "data.aws_ami.bastion",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:internet-gateway/igw-0b2792b67a60c709d",
            "id": "igw-0b2792b67a60c709d",
            "owner_id": "335507813633",
            "tags": {
              "Name": "MyVPC-Public"
            },
            "tags_all": {
              "Name": "MyVPC-Public"
            },
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e8a34d3d2145433",
            "association_id": "eipassoc-099d005563c232152",
            "connectivity_type": "public",
            "id": "nat-0bfc51cee7950e54e",
            "network_interface_id": "eni-0a982022887e411b8",
            "private_ip": "10.10.1.233",
            "public_ip": "43.201.196.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ff63b823a1ef409",
            "tags": {
              "Name": "MyVPC-NAT"
            },
            "tags_all": {
              "Name": "MyVPC-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:route-table/rtb-0bd1d23cc9e91ae88",
            "id": "rtb-0bd1d23cc9e91ae88",
            "owner_id": "335507813633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfc51cee7950e54e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyVPC-Pri-RTB"
            },
            "tags_all": {
              "Name": "MyVPC-Pri-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:route-table/rtb-0464479a964a1b995",
            "id": "rtb-0464479a964a1b995",
            "owner_id": "335507813633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2792b67a60c709d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyVPC-Pub-RTB"
            },
            "tags_all": {
              "Name": "MyVPC-Pub-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2063d9fea4bdd92",
            "route_table_id": "rtb-0bd1d23cc9e91ae88",
            "subnet_id": "subnet-0f4e938cc7b29cdb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d1752c00267e1c",
            "route_table_id": "rtb-0bd1d23cc9e91ae88",
            "subnet_id": "subnet-0c9e32258f28cca0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001ea3723dd3809e9",
            "route_table_id": "rtb-0464479a964a1b995",
            "subnet_id": "subnet-01ff63b823a1ef409"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f451f4750086737",
            "route_table_id": "rtb-0464479a964a1b995",
            "subnet_id": "subnet-0bb55b4a16394b3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-05119a8a1db54b80d",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05119a8a1db54b80d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from allowed CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-eks-shop-cluster-bastion-2025090613472342470000000c",
            "name_prefix": "my-eks-shop-cluster-bastion-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-0a2bbacc8562d1714",
            "description": "Security group for MySQL RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2bbacc8562d1714",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow MySQL access from within the VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-eks-shop-cluster-db-2025090613472342470000000d",
            "name_prefix": "my-eks-shop-cluster-db-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-db"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-07e1ec5114a9536d9",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e1ec5114a9536d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow Redis access from within the VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "my-eks-shop-cluster-redis-2025090613472342520000000e",
            "name_prefix": "my-eks-shop-cluster-redis-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-redis"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0f4e938cc7b29cdb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e938cc7b29cdb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0c9e32258f28cca0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e32258f28cca0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-01ff63b823a1ef409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ff63b823a1ef409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0bb55b4a16394b3af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb55b4a16394b3af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e5971c3b76363a6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:vpc/vpc-0e5971c3b76363a6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08a81fcb1e723df3e",
            "default_route_table_id": "rtb-0cff3c89a0ee091a8",
            "default_security_group_id": "sg-001da9b1cf6396354",
            "dhcp_options_id": "dopt-0ae639c5a77d7901b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5971c3b76363a6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cff3c89a0ee091a8",
            "owner_id": "335507813633",
            "tags": {
              "Name": "MyVPC",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "MyVPC",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "shop",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "shop",
            "metadata": [
              {
                "generation": 0,
                "name": "shop",
                "resource_version": "2095",
                "uid": "8ed89d60-63cd-4236-b285-7615ac5203ee"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "shop"
          },
          "dependencies": [
            "aws_eks_addon.coredns",
            "aws_eks_addon.kube_proxy",
            "aws_eks_addon.pod_identity_agent",
            "aws_eks_addon.vpc_cni",
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_node",
            "aws_iam_role_policy_attachment.cluster_policies",
            "aws_iam_role_policy_attachment.node_policies",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks"
          ]
        }
      ]
    }
  ]
}